# Game-of-life

./: CMakeLists.txt  GameOfLife.cpp  GameOfLife.h  Reademe.txt  Timing.cpp  Timing.h  mai21_1000bis10000_250gen_cpu_time.csv  mai21_1000bis10000_250gen_openmp_time.csv
